deploy/k8s/spog/api/030-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spog-api
  labels:
    app.kubernetes.io/name: spog-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spog
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: spog-api
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: spog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spog-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: spog
    spec:
      containers:
        - image: ghcr.io/trustification/trust:latest
          imagePullPolicy: Always
          name: service
          command: ["/trust"]
          args: ["spog", "api", "-p", "8080", "--bombastic-url", "http://bombastic-api", "--vexination-url", "http://vexination-api"]
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9010
            initialDelaySeconds: 2
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9010
            initialDelaySeconds: 2
          startupProbe:
            httpGet:
              path: /health/startup
              port: 9010
