deploy/k8s/spog/api/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: spog-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spog
  name: spog-api
spec:
  ports:
  - name: endpoint
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: spog-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spog
  type: ClusterIP
