deploy/k8s/spog/api/051-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: spog-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spog
  name: spog-api-vanity
spec:
  host: api.trustification.dev
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: spog-api
    weight: 100
  wildcardPolicy: None
